[main] fixed wrong font size at button component

--- a/src/shared/ui/button-default/styles.module.sass
+++ b/src/shared/ui/button-default/styles.module.sass
@@ -9,6 +9,7 @@
   border-color: var(--text-accent-color)
   color: var(--text-accent-color)
   gap: 6px
+  font-size: 20px
 
   &.isActive
     background: var(--button-background-active)
@@ -36,6 +37,7 @@
   padding: 21px 61px
   gap: 6px
   border: none
+  font-size: 20px
 
   &.isActive
     background: #D9B949
@@ -63,6 +65,7 @@
   border: none
   border-radius: 20px
   gap: 6px
+  font-size: 20px
 
   &.isActive
     background: var(--button-background-active)
